# pytup2019

./: LICENSE  README.md  custom_2to3.py  pyproject.toml  run_2to3.py  run_bowler.py  run_libcst.py
pytup2019/: create_all_libcst.py  fix_all_2to3.py  spell_check_bowler.py  utils.py
pytup2019/bowler_queries/: not_a_in_b.py  remove_debugger.py  spelling.py
pytup2019/fixers_2to3/: fix_all_attribute.py  fix_debugger_calls.py  fix_spelling.py
pytup2019/libcst_transforms/: all_attribute.py  mutable_args.py  not_a_in_b.py  parenthesized_return.py  remove_debugger.py  spelling.py
samples/: 1.py  bad_spelling.py  debugger.py  mutable_args.py  not_in.py
