[tool.poetry]
name = "pytup2019"
version = "0.1.0"
description = ""
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
libcst = "^0.2.2"

[tool.poetry.dev-dependencies]
ipython = "^7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
