[tool.poetry]
name = "pytup2019"
version = "0.1.0"
description = ""
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "=3.6.9"
libcst = "^0.2.2"
fissix = "^19.2b1"
bowler = "^0.8.0"

[tool.poetry.dev-dependencies]
ipython = "^7.9"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
